Deleted files and updated variables

--- a/Project_AstrAligned/templates/myapp/homepage.html
+++ b/Project_AstrAligned/templates/myapp/homepage.html
@@ -10,8 +10,8 @@
     <h3>Enter Your Horoscopes to Find Out</h3>
 
     <form action="" method="post">
-        <label for="user_one">Enter First Sign:</label> 
-        <select name="user_one" id="user_one">
+        <label for="sign1">Enter First Sign:</label>
+        <select name="sign1" id="sign1">
             <option value="aries">Aries</option>
             <option value="taurus">Taurus</option>
             <option value="gemini">Gemini</option>
@@ -26,9 +26,9 @@
             <option value="pisces">Pisces</option>
         </select>
         <br>
-        <br>   
-        <label for="user_two">Enter Second Sign:</label> 
-        <select name="user_two" id="user_two">
+        <br>
+        <label for="sign2">Enter Second Sign:</label>
+        <select name="sign2" id="sign2">
             <option value="aries">Aries</option>
             <option value="taurus">Taurus</option>
             <option value="gemini">Gemini</option>
@@ -41,7 +41,7 @@
             <option value="capricorn">Capricorn</option>
             <option value="aquarius">Aquarius</option>
             <option value="pisces">Pisces</option>
-        </select>    
+        </select>
         <br>
         <br>
         <button type="submit">Submit</button>
