--- a/Project_AstrAligned/templates/myapp/homepage.html
+++ b/Project_AstrAligned/templates/myapp/homepage.html
@@ -9,7 +9,8 @@
     <h2>Are You Star-Crossed Lovers?</h2>
     <h3>Enter Your Horoscopes to Find Out</h3>
 
-    <form action="" method="post">
+    <form action="{% url 'results' %}" method="post">
+        {% csrf_token %}
         <label for="sign1">Enter First Sign:</label>
         <select name="sign1" id="sign1">
             <option value="aries">Aries</option>
